--- a/app/templates/gra.html
+++ b/app/templates/gra.html
@@ -19,6 +19,6 @@
           {% endfor %}
         </ul>
         <hr>
-        <p><em><a href="{{ url }}">Zgłoś się!</a></em></p>
+        <input class="center-block-big" type="button" onclick="location.href='{{ url }}';" value="Zgłoś się!" />
     </body>
 </html>
