--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,18 +1,28 @@
 <html>
     <head>
-        <title>Hitler did some things wrong</title>
+        <title>HakierGrzonzo prezentuje:</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     </head>
     <body>
         <div>Nie wiem czy to ma prawo działać ale tu jest reset: <a href="/index">RESET</a></div>
         <hr>
+        <blockquote>
+          <p>&bdquo;A fajnie ten kod wygląda, skopiuje se go…&rdquo;</p>
+          <span><em>Grzegorz Koperwas</em> - 5 marca 2020, ucząc się robić strony internetowe.</span>
+        </blockquote>
         <h1>Witaj osobo!</h1>
-        <p>Mam nadzieje że to będzie działać, ale jak co to wykonuj polecenia osoby odpowiedzialnej. Ale mam dla ciebie parę zasad:</p>
+        <p>Mam nadzieje że to będzie działać, ale jak co to wykonuj polecenia
+          osoby odpowiedzialnej. Mam dla ciebie parę zasad, które mają na celu
+          minimalizacje prawdopodobieństwa rozlecenia się tego kodu napisanego w
+          dwie godziny, bez żadnego doświadczenia w web-dev'ie:</p>
         <ul>
           <li>Nadajcie sobie różne nicki, bowiem nie planuje obsługi powtórzeń.</li>
-          <li>Nie bawcie się adresem URL, albowiem tam możecie znaleźć swój nick, jego zmiana może mieć ciekawe konsekwencje. Proszę nie podszywać się pod inne osoby.</li>
+          <li>Nie bawcie się adresem URL, albowiem tam możecie znaleźć swój nick,
+            jego zmiana może mieć ciekawe konsekwencje. Proszę nie podszywać się pod inne osoby.</li>
           <li>Jak co to u góry jest przycisk reset</li>
-          <li>Nie wpisujcie spacji lub innych dziwnych znaków. Gwarantuje działanie liter nie-polskich oraz cyfr arabskich</li>
+          <li>Nie wpisujcie <del>spacji lub innych</del> dziwnych znaków. Gwarantuje
+            działanie liter nie-polskich, spacji oraz cyfr arabskich</li>
+          <li>Strona nie używa plików cookie, nie zbieram waszych danych osobowych</li>
         </ul>
         <hr>
         <h3>Wpisz tu swój <em>unikalny</em> nick:</h3>
